HTML construction-tree finished for now

--- a/index.html
+++ b/index.html
@@ -1,27 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>See food in Dallas</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <img class="header--image" src="./images/logo-black.png" />
+      <div class="header--hamburger">
+        <div class="stroke"></div>
+        <div class="stroke"></div>
+        <div class="stroke"></div>
+      </div>
+    </header>
 
-<header>
-    <div class="header--buttons">
-        <button class="header-button"></button>
-        <button class="header-button"></button>
-    </div> 
-</header>
+    <section class="outer-wrapper">
+      <div class="inner-wrapper">
+        <article class="navigation-box">
+          <div class="price-slider"></div>
+          <div class="delivery-tablebooking"></div>
+        </article>
 
-<section class="navigation-box">
-</section>
+        <article class="main-box" id="main-box">
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+          <div class="restaurant">
+            <img src="" alt="" class="restaurant-image" />
+            <p class="restaurant-name"></p>
+            <p class="restaurant-address"></p>
+            <p class="restaurant-rating"></p>
+            <p class="restaurant-price"></p>
+          </div>
+        </article>
+      </div>
+    </section>
 
-<section class="main-box" id="main-box"> 
-</section>
+    <footer class="footer">
+      <p class="footer--text">
+        A website made by Gabriella Bolin, Evelina Berg & Karin Nordkvist
+      </p>
+      <p class="footer--text">Copyright 2020 – Technigo - 6/24</p>
+      <p class="footer--text">Made with Zomato API</p>
+    </footer>
 
-<script src="./script.js"></script>
-
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
