--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     </div> 
 </header>
 
+<section class="outer-wrapper">
+<section class="inner-wrapper">
 <section class="navigation-box">
 </section>
 
 <section class="main-box" id="main-box"> 
 </section>
-
+</section>
+</section>
 <script src="./script.js"></script>
 
 </body>
